--- a/Control Statements.ipynb
+++ b/Control Statements.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "# Define a global variable for a for loop, outside of the function. \n",
+    "# Define a global variable for a `for loop`, outside of the function. \n",
     "v=zeros(10)"
    ]
   },
