--- a/Control Statements (1).ipynb
+++ b/Control Statements (1).ipynb
@@ -29,7 +29,10 @@
     }
    ],
    "source": [
-    "# Define a global variable for a for loop, outside of the function. \n",
+    "# Define a global variable for a `for loop`, outside of the function.\n",
+    "# For loops accept local variables\n",
+    "# To pull a global variable into local scope, use `global` <variablename>\n",
+    "# To pull a local into global scope, use `local` <variablename>\n",
     "v=zeros(10)"
    ]
   },
